Finish the current weather section

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
         <input type="text" placeholder="Enter location...">
     </div>
     <div class="big-container right-container blurred">
-        <h2>[city], [provice]</h2>
-        <div class="content">
+        <h2 id="location" class="header">[city], [provice]</h2>
+        <div class="content topcontent">
             <div id="current-info" class="blurred">
                 <div id="current-weather">
                     <img src="Sunny.png" alt="OOPs">
@@ -23,8 +23,8 @@
                 </div>
                 <div id="current-stats">
                     <p id="conditions">Clear</p>
-                    <p id="feels-like">Feels like:</p>
-                    <p>H:   L:</p>
+                    <p id="feels-like" class="subtext">Feels like:</p>
+                    <p id="high-and-low" class="subtext">H:   L:</p>
                 </div>
             </div>
             <div id="hourly">
