Display Hourly information

--- a/src/index.html
+++ b/src/index.html
@@ -39,12 +39,32 @@
             <p id="high-and-low" class="subtext">H: L:</p>
           </div>
         </div>
-        <div id="hourly">
-          <div id="hour1" class="hourly-div"></div>
-          <div id="hour2" class="hourly-div"></div>
-          <div id="hour3" class="hourly-div"></div>
-          <div id="hour4" class="hourly-div"></div>
-          <div id="hour5" class="hourly-div"></div>
+        <div id="hourly" class="hidden">
+          <div id="hour1" class="hourly-div">
+            <img src="./Sunny.png" alt="Sun"/>
+            <p class="hourlyTemp">21</p>
+            <p class="hourlyConditions">Cloudy</p>
+          </div>
+          <div id="hour2" class="hourly-div">
+            <img src="./Sunny.png" alt="Sun"/>
+            <p class="hourlyTemp">21</p>
+            <p class="hourlyConditions">Cloudy</p>
+          </div>
+          <div id="hour3" class="hourly-div">
+            <img src="./Sunny.png" alt="Sun"/>
+            <p class="hourlyTemp">21</p>
+            <p class="hourlyConditions">Cloudy</p>
+          </div>
+          <div id="hour4" class="hourly-div">
+            <img src="./Sunny.png" alt="Sun"/>
+            <p class="hourlyTemp">21</p>
+            <p class="hourlyConditions">Cloudy</p>
+          </div>
+          <div id="hour5" class="hourly-div">
+            <img src="./Sunny.png" alt="Sun"/>
+            <p class="hourlyTemp">21</p>
+            <p class="hourlyConditions">Cloudy</p>
+          </div>
         </div>
       </div>
       <div class="content observations">
