Fix a bug with hourly time
When the clock rolled over to the next day there would be an error since the function would try to take the temperature from hour 24+, which didnt exist in the array.  So I made a function to check for whether the day has changed and adjust for it

--- a/src/index.html
+++ b/src/index.html
@@ -43,27 +43,27 @@
           <div id="hour1" class="hourly-div">
             <img src="./Sunny.png" alt="Sun"/>
             <p class="hourlyTemp">21</p>
-            <p class="hourlyConditions">Cloudy</p>
+            <p class="hourlyTime">Cloudy</p>
           </div>
           <div id="hour2" class="hourly-div">
             <img src="./Sunny.png" alt="Sun"/>
             <p class="hourlyTemp">21</p>
-            <p class="hourlyConditions">Cloudy</p>
+            <p class="hourlyTime">Cloudy</p>
           </div>
           <div id="hour3" class="hourly-div">
             <img src="./Sunny.png" alt="Sun"/>
             <p class="hourlyTemp">21</p>
-            <p class="hourlyConditions">Cloudy</p>
+            <p class="hourlyTime">Cloudy</p>
           </div>
           <div id="hour4" class="hourly-div">
             <img src="./Sunny.png" alt="Sun"/>
             <p class="hourlyTemp">21</p>
-            <p class="hourlyConditions">Cloudy</p>
+            <p class="hourlyTime">Cloudy</p>
           </div>
           <div id="hour5" class="hourly-div">
             <img src="./Sunny.png" alt="Sun"/>
             <p class="hourlyTemp">21</p>
-            <p class="hourlyConditions">Cloudy</p>
+            <p class="hourlyTime">Cloudy</p>
           </div>
         </div>
       </div>
