--- a/src/index.html
+++ b/src/index.html
@@ -1,90 +1,91 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather Tracker</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="module" src="index.js" defer></script>
-  </head>
-  <body>
-    <div id="leftDiv">
-        <div id="fade"></div>
-        <div class="search-container big-container blurred">
-        <h1>Welcome</h1>
-        <form id="searchForm">
-            <input
-            id="location-input"
-            type="text"
-            placeholder="Enter location..."
-            required
-            />
-            <button onclick="storeInput()">Search</button>
-        </form>
-        </div>
-        <div id="gifContainer" class="big-container blurred hidden"><img src="#" alt="Catgif"></div>
-    </div>
 
-    <div id="rightDiv" class="big-container right-container blurred hidden">
-      <h2 id="location" class="header">[city], [provice]</h2>
-      <div class="content topcontent">
-        <div id="current-info" class="blurred">
-          <div id="current-weather">
-            <img src="Sunny.png" alt="OOPs" />
-            <p id="current-temp"></p>
-          </div>
-          <div id="current-stats">
-            <p id="conditions">Clear</p>
-            <p id="feels-like" class="subtext">Feels like:</p>
-            <p id="high-and-low" class="subtext">H: L:</p>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Weather Tracker</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <script type="module" src="index.js" defer></script>
+</head>
+
+<body>
+  <div id="leftDiv">
+    <div id="fade"></div>
+    <div class="search-container big-container blurred">
+      <h1>Welcome</h1>
+      <form id="searchForm">
+        <input id="location-input" type="text" placeholder="Enter location..." required />
+        <button onclick="storeInput()">Search</button>
+      </form>
+    </div>
+    <div id="leftDivLower">
+      <div id="gifContainer" class="big-container blurred hidden"><img src="#" alt="Catgif"></div>
+    </div>
+    
+  </div>
+
+  <div id="rightDiv" class="big-container right-container blurred hidden">
+    <h2 id="location" class="header">[city], [provice]</h2>
+    <div class="content topcontent">
+      <div id="current-info" class="blurred">
+        <div id="current-weather">
+          <img src="Sunny.png" alt="OOPs" />
+          <p id="current-temp"></p>
         </div>
-        <div id="hourly" class="hidden">
-          <div id="hour1" class="hourly-div">
-            <img src="./Sunny.png" alt="Sun"/>
-            <p class="hourlyTemp">21</p>
-            <p class="hourlyTime">Cloudy</p>
-          </div>
-          <div id="hour2" class="hourly-div">
-            <img src="./Sunny.png" alt="Sun"/>
-            <p class="hourlyTemp">21</p>
-            <p class="hourlyTime">Cloudy</p>
-          </div>
-          <div id="hour3" class="hourly-div">
-            <img src="./Sunny.png" alt="Sun"/>
-            <p class="hourlyTemp">21</p>
-            <p class="hourlyTime">Cloudy</p>
-          </div>
-          <div id="hour4" class="hourly-div">
-            <img src="./Sunny.png" alt="Sun"/>
-            <p class="hourlyTemp">21</p>
-            <p class="hourlyTime">Cloudy</p>
-          </div>
-          <div id="hour5" class="hourly-div">
-            <img src="./Sunny.png" alt="Sun"/>
-            <p class="hourlyTemp">21</p>
-            <p class="hourlyTime">Cloudy</p>
-          </div>
+        <div id="current-stats">
+          <p id="conditions">Clear</p>
+          <p id="feels-like" class="subtext">Feels like:</p>
+          <p id="high-and-low" class="subtext">H: L:</p>
         </div>
       </div>
-      <div class="content observations">
-        <div id="sunrise" class="observation-cell">sunrise</div>
-        <div id="UV" class="observation-cell">UV</div>
-        <div id="wind" class="observation-cell">wind</div>
-        <div id="humidity" class="observation-cell">humidity</div>
-        <div id="visibility" class="observation-cell">visibility</div>
-        <div id="pressure" class="observation-cell">pressure</div>
-      </div>
-      <h2 id="forecast-header">7 Day Forecast</h2>
-      <div class="content week-forecast">
-        <div id="day1" class="weekly-div"></div>
-        <div id="day2" class="weekly-div"></div>
-        <div id="day3" class="weekly-div"></div>
-        <div id="day4" class="weekly-div"></div>
-        <div id="day5" class="weekly-div"></div>
-        <div id="day6" class="weekly-div"></div>
-        <div id="day7" class="weekly-div"></div>
+      <div id="hourly" class="hidden">
+        <div id="hour1" class="hourly-div">
+          <img src="./Sunny.png" alt="Sun" />
+          <p class="hourlyTemp">21</p>
+          <p class="hourlyTime">Cloudy</p>
+        </div>
+        <div id="hour2" class="hourly-div">
+          <img src="./Sunny.png" alt="Sun" />
+          <p class="hourlyTemp">21</p>
+          <p class="hourlyTime">Cloudy</p>
+        </div>
+        <div id="hour3" class="hourly-div">
+          <img src="./Sunny.png" alt="Sun" />
+          <p class="hourlyTemp">21</p>
+          <p class="hourlyTime">Cloudy</p>
+        </div>
+        <div id="hour4" class="hourly-div">
+          <img src="./Sunny.png" alt="Sun" />
+          <p class="hourlyTemp">21</p>
+          <p class="hourlyTime">Cloudy</p>
+        </div>
+        <div id="hour5" class="hourly-div">
+          <img src="./Sunny.png" alt="Sun" />
+          <p class="hourlyTemp">21</p>
+          <p class="hourlyTime">Cloudy</p>
+        </div>
       </div>
     </div>
-  </body>
+    <div class="content observations">
+      <div id="sunrise" class="observation-cell">sunrise</div>
+      <div id="UV" class="observation-cell">UV</div>
+      <div id="wind" class="observation-cell">wind</div>
+      <div id="humidity" class="observation-cell">humidity</div>
+      <div id="visibility" class="observation-cell">visibility</div>
+      <div id="pressure" class="observation-cell">pressure</div>
+    </div>
+    <h2 id="forecast-header">7 Day Forecast</h2>
+    <div class="content week-forecast">
+      <div id="day1" class="weekly-div"></div>
+      <div id="day2" class="weekly-div"></div>
+      <div id="day3" class="weekly-div"></div>
+      <div id="day4" class="weekly-div"></div>
+      <div id="day5" class="weekly-div"></div>
+      <div id="day6" class="weekly-div"></div>
+      <div id="day7" class="weekly-div"></div>
+    </div>
+  </div>
+</body>
+
 </html>
