Add images and descriptions for observations

--- a/src/index.html
+++ b/src/index.html
@@ -68,12 +68,31 @@
       </div>
     </div>
     <div class="content observations">
-      <div id="sunrise" class="observation-cell">sunrise</div>
-      <div id="UV" class="observation-cell">UV</div>
-      <div id="wind" class="observation-cell">wind</div>
-      <div id="humidity" class="observation-cell">humidity</div>
-      <div id="visibility" class="observation-cell">visibility</div>
-      <div id="pressure" class="observation-cell">pressure</div>
+      <div id="sunrise" class="observation-cell">
+        <img src="./Sunset.png" alt="Sunset">
+        <p>Sunrise:</p>
+        <p>Sunsset:</p>
+      </div>
+      <div id="UV" class="observation-cell">
+        <img src="./Gauge.png" alt="UV">
+        <p>UV Index:</p>
+      </div>
+      <div id="wind" class="observation-cell">
+        <img src="./Wind gust.png" alt="UV">
+        <p>Wind:</p>
+      </div>
+      <div id="humidity" class="observation-cell">
+        <img src="./RainDrop.png" alt="UV">
+        <p>Humidity:</p>
+      </div>
+      <div id="visibility" class="observation-cell">
+        <img src="./eye-256.png" alt="UV">
+        <p>Visibility:</p>
+      </div>
+      <div id="pressure" class="observation-cell">
+        <img src="./pressure.png" alt="UV">
+        <p>Pressure:</p>
+      </div>
     </div>
     <h2 id="forecast-header">7 Day Forecast</h2>
     <div class="content week-forecast">
