Get functional weekly divs

--- a/src/index.html
+++ b/src/index.html
@@ -40,27 +40,27 @@
         </div>
       </div>
       <div id="hourly" class="hidden">
-        <div id="hour1" class="hourly-div">
+        <div id="hour1" class="hourly-div hidden">
           <img src="./Sunny.png" alt="Sun" />
           <p class="hourlyTemp">21</p>
           <p class="hourlyTime">Cloudy</p>
         </div>
-        <div id="hour2" class="hourly-div">
+        <div id="hour2" class="hourly-div hidden">
           <img src="./Sunny.png" alt="Sun" />
           <p class="hourlyTemp">21</p>
           <p class="hourlyTime">Cloudy</p>
         </div>
-        <div id="hour3" class="hourly-div">
+        <div id="hour3" class="hourly-div hidden">
           <img src="./Sunny.png" alt="Sun" />
           <p class="hourlyTemp">21</p>
           <p class="hourlyTime">Cloudy</p>
         </div>
-        <div id="hour4" class="hourly-div">
+        <div id="hour4" class="hourly-div hidden">
           <img src="./Sunny.png" alt="Sun" />
           <p class="hourlyTemp">21</p>
           <p class="hourlyTime">Cloudy</p>
         </div>
-        <div id="hour5" class="hourly-div">
+        <div id="hour5" class="hourly-div hidden">
           <img src="./Sunny.png" alt="Sun" />
           <p class="hourlyTemp">21</p>
           <p class="hourlyTime">Cloudy</p>
@@ -68,41 +68,69 @@
       </div>
     </div>
     <div class="content observations">
-      <div id="sunrise" class="observation-cell">
+      <div id="sunrise" class="observation-cell hidden">
         <img src="./Sunset.png" alt="Sunset">
         <p>Sunrise:</p>
         <p>Sunsset:</p>
       </div>
-      <div id="UV" class="observation-cell">
+      <div id="UV" class="observation-cell hidden">
         <img src="./Gauge.png" alt="UV">
         <p>UV Index:</p>
       </div>
-      <div id="wind" class="observation-cell">
+      <div id="wind" class="observation-cell hidden">
         <img src="./Wind gust.png" alt="UV">
         <p>Wind:</p>
       </div>
-      <div id="humidity" class="observation-cell">
+      <div id="humidity" class="observation-cell hidden">
         <img src="./RainDrop.png" alt="UV">
         <p>Humidity:</p>
       </div>
-      <div id="visibility" class="observation-cell">
+      <div id="visibility" class="observation-cell hidden">
         <img src="./eye-256.png" alt="UV">
         <p>Visibility:</p>
       </div>
-      <div id="pressure" class="observation-cell">
+      <div id="pressure" class="observation-cell hidden">
         <img src="./pressure.png" alt="UV">
         <p>Pressure:</p>
       </div>
     </div>
     <h2 id="forecast-header">7 Day Forecast</h2>
     <div class="content week-forecast">
-      <div id="day1" class="weekly-div"></div>
-      <div id="day2" class="weekly-div"></div>
-      <div id="day3" class="weekly-div"></div>
-      <div id="day4" class="weekly-div"></div>
-      <div id="day5" class="weekly-div"></div>
-      <div id="day6" class="weekly-div"></div>
-      <div id="day7" class="weekly-div"></div>
+      <div id="day1" class="weekly-div">
+        <p class="date">Oct 25</p>
+        <img class="dailyConditions" src="#" alt="Image">
+        <p class="dailyTemp">21</p>
+      </div>
+      <div id="day2" class="weekly-div">
+        <p class="date">Oct 25</p>
+        <img class="dailyConditions" src="#" alt="Image">
+        <p class="dailyTemp">21</p>
+      </div>
+      <div id="day3" class="weekly-div">
+        <p class="date">Oct 25</p>
+        <img class="dailyConditions" src="#" alt="Image">
+        <p class="dailyTemp">21</p>
+      </div>
+      <div id="day4" class="weekly-div">
+        <p class="date">Oct 25</p>
+        <img class="dailyConditions" src="#" alt="Image">
+        <p class="dailyTemp">21</p>
+      </div>
+      <div id="day5" class="weekly-div">
+        <p class="date">Oct 25</p>
+        <img class="dailyConditions" src="#" alt="Image">
+        <p class="dailyTemp">21</p>
+      </div>
+      <div id="day6" class="weekly-div">
+        <p class="date">Oct 25</p>
+        <img class="dailyConditions" src="#" alt="Image">
+        <p class="dailyTemp">21</p>
+      </div>
+      <div id="day7" class="weekly-div">
+        <p class="date">Oct 25</p>
+        <img class="dailyConditions" src="#" alt="Image">
+        <p class="dailyTemp">21</p>
+      </div>
     </div>
   </div>
 </body>
