--- a/src/index.html
+++ b/src/index.html
@@ -96,37 +96,37 @@
     </div>
     <h2 id="forecast-header">7 Day Forecast</h2>
     <div class="content week-forecast">
-      <div id="day1" class="weekly-div">
+      <div id="day1" class="weekly-div hidden">
         <p class="date">Oct 25</p>
         <img class="dailyConditions" src="#" alt="Image">
         <p class="dailyTemp">21</p>
       </div>
-      <div id="day2" class="weekly-div">
+      <div id="day2" class="weekly-div hidden">
         <p class="date">Oct 25</p>
         <img class="dailyConditions" src="#" alt="Image">
         <p class="dailyTemp">21</p>
       </div>
-      <div id="day3" class="weekly-div">
+      <div id="day3" class="weekly-div hidden">
         <p class="date">Oct 25</p>
         <img class="dailyConditions" src="#" alt="Image">
         <p class="dailyTemp">21</p>
       </div>
-      <div id="day4" class="weekly-div">
+      <div id="day4" class="weekly-div hidden">
         <p class="date">Oct 25</p>
         <img class="dailyConditions" src="#" alt="Image">
         <p class="dailyTemp">21</p>
       </div>
-      <div id="day5" class="weekly-div">
+      <div id="day5" class="weekly-div hidden">
         <p class="date">Oct 25</p>
         <img class="dailyConditions" src="#" alt="Image">
         <p class="dailyTemp">21</p>
       </div>
-      <div id="day6" class="weekly-div">
+      <div id="day6" class="weekly-div hidden">
         <p class="date">Oct 25</p>
         <img class="dailyConditions" src="#" alt="Image">
         <p class="dailyTemp">21</p>
       </div>
-      <div id="day7" class="weekly-div">
+      <div id="day7" class="weekly-div hidden">
         <p class="date">Oct 25</p>
         <img class="dailyConditions" src="#" alt="Image">
         <p class="dailyTemp">21</p>
